@@ -47,6 +47,7 @@ Unreleased Version 2.2.2-pre
  * Feature: Right-clicking outside of a transform now applies it. Thanks MorrowShore for suggesting.
  * Feature: Allow dragging selections to quickly move their contents without having to double-click to deselect and dragging the edge to move the selection itself without its contents. Thanks Blozzom, Lungy, MorrowShore, SadColor and Zheida for suggesting and testing.
  * Fix: Don't mark the canvas as saved if it was only exported.
+ * Fix: Round colors to 8 bits in fill and magic wand tools so that they don't get snagged on color differences too small to see on screen. Thanks vipperz for reporting.
 
 2024-11-06 Version 2.2.2-beta.4
  * Fix: Solve rendering glitches with selection outlines that happen on some systems. Thanks xxxx for reporting.
